Closed Bug 1528563 Opened 5 years ago Closed 5 years ago

Uninitialized member in LoadInfo's copy constructor

Categories

(Core :: Security, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla67
Tracking Status
firefox-esr60 --- unaffected
firefox65 --- unaffected
firefox66 --- unaffected
firefox67 --- fixed

People

(Reporter: ehsan.akhgari, Assigned: ehsan.akhgari)

References

(Blocks 1 open bug)

Details

(Keywords: regression)

Attachments

(1 file)

Pushed by eakhgari@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/93a4c9ff0cb5
Initialize mFrameBrowsingContextID inside LoadInfo's copy constructor; r=nika
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla67
Assignee: nobody → ehsan
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: