Bug 1528563 - Initialize mFrameBrowsingContextID inside LoadInfo's copy constructor; r=nika

Differential Revision: https://phabricator.services.mozilla.com/D20072